# sp_vision_25_rosim

./: CHANGES_SUMMARY.md  CMakeLists.txt  QUICK_START.md  README_SIMULATION.txt  SIMULATION_GUIDE.md  package.xml  readme.md
configs/: ros_sentry.yaml  sim_sentry.yaml  sim_standard.yaml
install/: local_setup.sh  setup.sh
install/sp_vision/share/sp_vision/: package.bash  package.zsh
io/: CMakeLists.txt  camera.cpp  camera.hpp  cboard.cpp  cboard.hpp  sim_board.cpp  sim_board.hpp  sim_camera.cpp  sim_camera.hpp
src/: sim_sentry.cpp
tasks/auto_aim/: aimer.cpp  solver.cpp  solver.hpp  target.cpp  tracker.cpp  tracker.hpp
tasks/auto_aim/yolos/: yolov5.cpp  yolov8.cpp  yolov8.hpp
tools/: thread_safe_queue.hpp  time_converter.hpp
