<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sp_vision</name>
  <version>0.0.0</version>
  <description>Vision package for SuperPower standard robot</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rmoss_interfaces</depend>
  <depend>vision_interfaces</depend>
  <depend>sp_msgs</depend>

  <depend>OpenCV</depend>
  <depend>fmt</depend>
  <depend>spdlog</depend>
  <depend>yaml-cpp</depend>
  <depend>nlohmann_json</depend>
  <!-- OpenVINO dependency handling varies; often system installed -->

  <!-- Eigen3 is usually a build dependency -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
